<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/app_text"
        style="@style/App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/great_text"
        style="@style/App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/login_greating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_text">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_for_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:hint="@string/register_edit_user_mail"


        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/principalBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_for_pwd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/register_edit_user_pwd"
        app:endIconMode="password_toggle"


        app:layout_constraintStart_toStartOf="@+id/text_input_layout_for_email"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_for_email"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/principalBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/next"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="144dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/principalBlue"
        android:fontFamily="@font/seguisb"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_for_pwd" />

    <TextView
        android:id="@+id/textView2"
        style="@style/DateHorizontalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/login_link_register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/link"
        app:layout_constraintTop_toTopOf="@+id/link">

    </TextView>

    <TextView
        android:id="@+id/link"
        style="@style/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register_btn_begin"
        app:layout_constraintEnd_toEndOf="@+id/next"
        app:layout_constraintTop_toBottomOf="@+id/next">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>