<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:id="@+id/layoutBegin">

    <androidx.cardview.widget.CardView
        android:id="@+id/register_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/principalBlue"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704">

        <TextView
            style="@style/ResgisterBtnTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_btn_begin"
            android:textAlignment="center">

        </TextView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text"
        style="@style/DateHorizontalTextStyle"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/register_link_login"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        android:layout_marginTop="8dp">

    </TextView>

    <TextView
        style="@style/link"
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/login_text"
        app:layout_constraintStart_toEndOf="@+id/text"
        app:layout_constraintTop_toBottomOf="@+id/register_btn">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>